# dots

./: .pre-commit-config.yaml  README.md  flake.nix  hm-configs.nix  nixos-configs.nix  pre-commit-config.yaml  shell.nix
system/: bluetooth.nix  boot.nix  desktop.nix  graphics.nix  hardware-configuration.nix  kanata.nix  lanzaboote.nix  locale.nix  nixos.nix  sound.nix  steam.nix  theme.nix
user/: audio.nix  bluetooth.nix  browser.nix  btop.nix  emacs-config.nix  emacs-init.nix  emacs.nix  fish.nix  fonts.nix  genericLinux.nix  ghdashboard.nix  ghostty.nix  git.nix  helix.nix  home.nix  hyprglass.nix  hypridle.nix  hyprland.nix  hyprsunset.nix  ignis.nix  kanata.nix  kitty.nix  lock.nix  monitor.nix  neovim.nix  notifications.nix  openrgb.nix  options.nix  os-cli.nix  os_cli.py  packages.nix  qt.nix  quickshell.nix  sound.nix  spicetify.nix  startup.nix  swaync.nix  terminal.nix  theme.nix  tmux.nix  (+3 more)
user/emacs/: config.el  emacs.nix  init.el  packages.el
user/ghdashboard/: default.nix  example.nix  server.py  shell.nix
user/ignis/: app.scss  app_launcher.py  bar.py  config.py  lock_screen.py  logout_menu.py
user/ignis/scss/: bar.scss  lock_screen.scss  logout_menu.scss
user/kanata/: config.kbd  kanata.nix
user/quickshell/: README.md  flake.nix  nmtui.qml
user/quickshell/quickshell/: app_launcher.qml  bar.qml  config.js  nmtui.qml  notifications.qml
user/quickshell/quickshell/bar/: BarWindow.qml  Brightness.qml  Controls.qml  HoverPanel.qml  Sys.qml  (+6 more)
user/quickshell/shell-server/: Cargo.toml  shell-server.nix
user/quickshell/shell-server/src/: main.rs
