[package]
name = "shell-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
freedesktop_entry_parser = "2.0.1"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
walkdir = "2.5.0"

[dev-dependencies]
cargo-watch = "8.5.3"
